# wordle-rs

./: Cargo.toml  README.md  wordlist-de.txt
.github/workflows/: rust.yaml
wordle_ai/: Cargo.toml
wordle_ai/src/: entropy_guesser.rs  heuristic_guesser.rs  knowledge.rs  lib.rs  random_guesser.rs  random_with_updates.rs
wordle_ai_cli/: Cargo.toml
wordle_ai_cli/src/: assistant.rs  common.rs  main.rs  simulate.rs
wordle_ai_web/: Cargo.toml  build_release.sh  index.html
wordle_ai_web/src/: main.rs
wordle_ai_web/src/styles/: mod.rs
wordle_cli/: Cargo.toml
wordle_cli/src/: main.rs
wordle_core/: Cargo.toml
wordle_core/src/: lib.rs
wordle_proc/: Cargo.toml
wordle_proc/src/: lib.rs
wordle_web/: Cargo.toml  index.html
wordle_web/src/: main.rs
wordle_web/src/components/: footer.rs  header.rs  message_banner.rs  mod.rs  tile.rs
wordle_web/src/pages/: ai_solver.rs  game.rs  mod.rs  not_found.rs
wordle_web/src/styles/: mod.rs
