[package]
name = "wordle_ai_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
wordle_core = { path = "../wordle_core" }
wordle_ai = { path = "../wordle_ai" }
wordle_proc = { path = "../wordle_proc" }
ratatui = "0.29.0"
color-eyre = "0.6.5"
clap = { version = "4.5.53", features = ["derive"] }
rand = "0.9.2"
rayon = "1.11.0"
