[package]
name = "wordle_ai_web"
version = "0.1.0"
edition = "2024"

[dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }
leptos = { version = "0.8.14", features = ["csr"] }
wordle_ai = { path = "../wordle_ai" }
wordle_core = { path = "../wordle_core" }
wordle_proc = { path = "../wordle_proc" }
